Update build config and remove robolectric
Official unit testing support is in RC status now anyway.